--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.img1 {
+  width: 100%;
+  height: 100%;
+  background-image: url('https://i.ibb.co/NjDF3Lc/1.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
