--- a/src/App.css
+++ b/src/App.css
@@ -134,25 +134,24 @@ body {
   background-size: cover;
 }
 
-.danimImg1 {
-  width: 70vw;
-  height: 100%;
-  background-image: url('https://cdn.shopify.com/s/files/1/0256/4594/0810/files/banner_1_900x.png?v=1615515282');
-  background-position: top;
+.login-img {
+  width: 100%;
+  height: 80vh;
+  background-image: url('https://img.freepik.com/free-vector/display-podium-3d-rendering-vector-minimal-pastel-product-backdrop_53876-117234.jpg?w=740&t=st=1651900381~exp=1651900981~hmac=f1a0459defaa62cf3eace577991511e07a0da2611c1d2ad2d9c869eca61daca1');
+  background-position: center;
   background-repeat: no-repeat;
-  /* background-size: cover; */
-  object-fit: cover;
+  background-size: cover;
 }
 
-.danimImg2 {
+/* .danimImg2 {
   width: 30vw;
   height: 50%;
   background-image: url('https://cdn.shopify.com/s/files/1/0256/4594/0810/files/banner_3_540x.png?v=1615515309');
   background-position: center;
   background-repeat: no-repeat;
   /* background-size: cover; */
-  object-fit: cover;
-}
+/* object-fit: cover;
+} */
 
 .danimImg3 {
   width: 30vw;
@@ -164,7 +163,7 @@ body {
   object-fit: cover;
 }
 
-.team-img {
+*/ .team-img {
   width: 97vw;
   height: 75vh;
   background-image: url('https://i.ibb.co/ZYbTd5b/imgimgimg.webp');
@@ -177,7 +176,6 @@ body {
 
 
 .team-img::after {
-
   content: "";
   position: absolute;
   top: 0;
