--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,10 @@ body {
   border-bottom: 2px solid white;
 }
 
+.border-header {
+  border-bottom: 2px solid #64B9B4;
+}
+
 /* google font */
 
 .font-custom {
